yml/docker-maven-demo-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: docker-maven-demo
  name: docker-maven-demo
spec:
  ports:
    - port: 8080
  selector:
    app: docker-maven-demo
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docker-maven-demo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: docker-maven-demo
    spec:
      containers:
      - name: docker-maven-demo
        image: harbor.landaudev.com/demo/spring-boot-docker
        ports:
        - containerPort: 8080
