yml/docker-maven-demo-ingress-aliyunk8s.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: docker-maven-demo-ingress
  name: docker-maven-demo-ingress
spec:
  ports:
    - port: 8080
  selector:
    app: docker-maven-demo-ingress

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docker-maven-demo-ingress
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: docker-maven-demo-ingress
    spec:
      imagePullSecrets: 
      - name: landa-harbor-secret
      containers:
      - name: docker-maven-demo-ingress
        image: registry.cn-shanghai.aliyuncs.com/landasoft/landa-mas:spring-boot-docker
#        image: harbor.k8s.landaudev.com/demo/spring-boot-docker
        ports:
        - containerPort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-maven-demo-ingress
spec:
  rules:
  - host: docker-maven-demo-ingress.alik8s.landaudev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-maven-demo-ingress
          servicePort: 8080
